# rtk

./: CHANGELOG.md  Cargo.toml  README.md  README_es.md  SECURITY.md  install.sh
.claude/agents/: rust-rtk.md  system-architect.md
.claude/hooks/: rtk-rewrite.sh
.claude/rules/: search-strategy.md
.claude/skills/performance/: SKILL.md
docs/: privacy-hardening-plan.md
docs/contributing/: ARCHITECTURE.md  CODING_PRACTICES.md  TECHNICAL.md
docs/guide/: index.md
docs/guide/getting-started/: configuration.md  supported-agents.md
docs/guide/resources/: what-rtk-covers.md
docs/usage/: FEATURES.md  TRACKING.md
hooks/: README.md
hooks/claude/: README.md  test-rtk-rewrite.sh
hooks/codex/: README.md
hooks/pi/: README.md  rtk-awareness.md
src/: main.rs
src/analytics/: gain.rs
src/cmds/git/: gh_cmd.rs
src/cmds/system/: grep_cmd.rs
src/core/: README.md  args_utils.rs  cmd_pattern.rs  config.rs  mod.rs  toml_filter.rs  tracking.rs  xcodebuild.rs
src/discover/: registry.rs  rules.rs
src/filters/: helm.toml  xcodebuild.toml
src/hooks/: README.md  constants.rs  hook_cmd.rs  init.rs  mod.rs  rewrite_cmd.rs  verify_cmd.rs
