[package]
name = "rtk"
version = "0.37.2"
edition = "2021"
authors = ["Patrick Szymkowiak"]
description = "Rust Token Killer - High-performance CLI proxy to minimize LLM token consumption"
license = "MIT"
homepage = "https://www.rtk-ai.app"
repository = "https://github.com/rtk-ai/rtk"
readme = "README.md"
keywords = ["cli", "llm", "token", "filter", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Versions pinned with `=X.Y.Z` for supply-chain hardening.
# Bumps require an explicit edit here AND a `cargo update` review.
clap = { version = "=4.5.60", features = ["derive"] }
anyhow = "=1.0.102"
ignore = "=0.4.25"
walkdir = "=2.5.0"
regex = "=1.12.3"
lazy_static = "=1.5.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.149", features = ["preserve_order"] }
colored = "=2.2.0"
dirs = "=5.0.1"
rusqlite = { version = "=0.31.0", features = ["bundled"] }
toml = "=0.8.23"
chrono = "=0.4.44"
tempfile = "=3.26.0"
sha2 = "=0.10.9"
flate2 = "=1.1.9"
quick-xml = "=0.37.5"
which = "=8.0.1"
automod = "=1.0.16"

[target.'cfg(unix)'.dependencies]
libc = "=0.2.182"

[build-dependencies]
toml = "=0.8.23"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# cargo-deb configuration
[package.metadata.deb]
maintainer = "Patrick Szymkowiak"
copyright = "2024 Patrick Szymkowiak"
license-file = ["LICENSE", "0"]
extended-description = "rtk filters and compresses command outputs before they reach your LLM context, saving 60-90% of tokens."
section = "utility"
priority = "optional"
assets = [
    ["target/release/rtk", "usr/bin/", "755"],
]
# cargo-generate-rpm configuration
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rtk", dest = "/usr/bin/rtk", mode = "755" },
]
